<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jminix</groupId>
	<artifactId>jminix</artifactId>
	<name>jminix</name>
	<version>1.3.5</version>
	<description>A simple embeddable restful JMX console</description>
	<packaging>jar</packaging>
	<url>http://www.jminix.org</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:svn:http://jminix.googlecode.com/svn/trunk/jminix</connection>
		<developerConnection>scm:svn:https://jminix.googlecode.com/svn/trunk/jminix</developerConnection>
		<url>http://code.google.com/p/jminix/source/browse/trunk/jminix</url>
	</scm>

	<developers>
		<developer>
			<name>Laurent Bovet</name>
			<email>lbovet@jminix.org</email>
			<organization>Swiss Post</organization>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<repositories>
		<repository>
			<id>maven-restlet</id>
			<name>Restlet repository</name>
			<url>https://maven.restlet.talend.com</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.restlet</groupId>
			<artifactId>org.restlet</artifactId>
			<version>${restlet.version}</version>
		</dependency>
		<dependency>
			<groupId>org.restlet</groupId>
			<artifactId>org.restlet.ext.velocity</artifactId>
			<version>${restlet.version}</version>
		</dependency>
		<dependency>
			<groupId>org.restlet</groupId>
			<artifactId>org.restlet.ext.servlet</artifactId>
			<version>${restlet.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.3.5</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.4</version>
			<classifier>jdk15</classifier>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jgroups</groupId>
			<artifactId>jgroups</artifactId>
			<version>4.2.30.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>${jdk}</source>
					<target>${jdk}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>21</source>
					<additionalOptions>
						<option>--allow-script-in-comments</option>
					</additionalOptions>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
						<version>${spring.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>src</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<!-- Run shade goal on package phase -->
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<!-- add Main-Class to manifest file -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.jminix.console.tool.StandaloneMiniConsole</mainClass>
								</transformer>
							</transformers>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>standalone</shadedClassifierName>
						</configuration>
					</execution>
				</executions>
			</plugin>
<!--			<plugin>-->
<!--				<groupId>com.theoryinpractise</groupId>-->
<!--				<artifactId>googleformatter-maven-plugin</artifactId>-->
<!--				<version>1.7.3</version>-->
<!--				<executions>-->
<!--					<execution>-->
<!--						<id>reformat-sources</id>-->
<!--						<configuration>-->
<!--							<includeStale>false</includeStale>-->
<!--							<style>GOOGLE</style>-->
<!--							<formatMain>true</formatMain>-->
<!--							<formatTest>true</formatTest>-->
<!--							<filterModified>false</filterModified>-->
<!--							<skip>false</skip>-->
<!--							<fixImports>true</fixImports>-->
<!--							<maxLineLength>100</maxLineLength>-->
<!--						</configuration>-->
<!--						<goals>-->
<!--							<goal>format</goal>-->
<!--						</goals>-->
<!--						<phase>process-sources</phase>-->
<!--					</execution>-->
<!--				</executions>-->
<!--			</plugin>-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<configuration>
							<configLocation>google_checks.xml</configLocation> 
							<suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation>
							<inputEncoding>UTF-8</inputEncoding>
							<failsOnError>true</failsOnError>
							<consoleOutput>false</consoleOutput>
							<includeTestSourceDirectory>false</includeTestSourceDirectory>
							<headerLocation>checkstyle-header.txt</headerLocation>
						</configuration>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<properties>
		<spring.version>6.2.8</spring.version>
		<restlet.version>2.6.0</restlet.version>
		<jdk>21</jdk>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<distributionManagement>
		<site>
			<id>projects.doc</id>
			<name>projects.doc</name>
			<url>file:\\projects\doc\${project.groupId}\${project.version}</url>
		</site>
		<repository>
			<id>maven2-post</id>
			<name>maven2-post</name>
			<url>file:\\maven\maven2-post</url>
			<layout>default</layout>
			<uniqueVersion>true</uniqueVersion>
		</repository>
		<snapshotRepository>
			<id>maven2-snapshot</id>
			<name>maven2-snapshot</name>
			<url>file:\\maven\maven2-snapshot</url>
			<layout>default</layout>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.6.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

</project>
